# garthen

./: .dockerignore  .gitignore  Dockerfile.data-worker  Dockerfile.global-api  Dockerfile.global-ws  Dockerfile.web-client  README.md  commitlint.config.js  docker-compose.yml
data-worker/: Cargo.toml  README.md
data-worker/src/: amqp_client.rs  error.rs  garthen.rs  main.rs
data-worker/src/services/: mod.rs
data-worker/src/services/device/: model.rs  threads.rs
data-worker/src/services/device_record/: mod.rs  model.rs  threads.rs
data-worker/src/services/greenhouse/: model.rs
global-api/: Cargo.toml  README.md
global-api/src/: error.rs  main.rs
global-api/src/services/: mod.rs
global-api/src/services/auth/: mod.rs  model.rs  routes.rs
global-api/src/services/session/: middleware.rs  mod.rs  model.rs
global-api/src/services/system/: mod.rs  routes.rs
global-api/src/services/user/: mod.rs  model.rs
global-api/src/utils/: dns.rs  mod.rs
global-ws/: Cargo.toml  README.md
global-ws/src/: error.rs  main.rs  messages.rs
global-ws/src/messages/: data.rs  mod.rs
global-ws/src/server/: amqp_client.rs  connection.rs  mod.rs  socket.rs
global-ws/src/services/: mod.rs
global-ws/src/services/device/: handler.rs  model.rs  subscriber.rs
global-ws/src/services/device_record/: mod.rs  model.rs  subscriber.rs
global-ws/src/services/greenhouse/: handler.rs  mod.rs  model.rs  subscriber.rs
global-ws/src/services/session/: mod.rs  model.rs
global-ws/src/services/user/: handler.rs  model.rs  subscriber.rs
global-ws/src/utils/: dns.rs
libs/amqp/: Cargo.toml  README.md
libs/amqp/src/: lib.rs
libs/db/: Cargo.toml  README.md
libs/db/migrations/2023-02-12-224041_create_sessions/: down.sql  up.sql
libs/db/migrations/2023-02-13-170146_create_users/: down.sql  up.sql
libs/db/migrations/2023-02-17-091254_create_greenhouses/: down.sql  up.sql
libs/db/migrations/2023-02-24-171327_add_locale_and_theme_to_users/: down.sql  up.sql
libs/db/migrations/2023-03-03-172641_create_devices/: down.sql  up.sql
libs/db/migrations/2023-03-03-223326_create_device_records/: down.sql  up.sql
libs/db/migrations/2023-03-03-225140_drop_devices_created_at_index/: down.sql  up.sql
libs/db/migrations/2023-03-15-203451_merge_device_id_index_with_created_at_index/: down.sql  up.sql
libs/db/migrations/2023-03-16-091841_add_critical_values/: down.sql  up.sql
libs/db/src/: lib.rs  schema.rs
libs/passwd/: Cargo.toml  README.md
libs/passwd/src/: lib.rs
libs/serde-eetf/: Cargo.toml
libs/serde-eetf/src/: de.rs  error.rs  lib.rs  ser.rs
libs/serde-eetf/wasm/: README.md  package.json  serde_eetf.d.ts  serde_eetf.js  serde_eetf_bg.wasm
libs/snowflake-generator/: .gitignore  Cargo.toml  README.md
libs/snowflake-generator/src/: lib.rs
web-client/: .gitignore  README.md  app.vue  nuxt.config.js  package-lock.json  package.json
web-client/assets/locales/: en-GB.json  ru-RU.json
web-client/assets/styles/: _colors.scss  _variables.scss
web-client/components/analytics/: Chart.vue  Row.vue  Rows.vue  Table.vue
web-client/components/analytics/header/: Header.vue  LeftSide.vue  RightSide.vue
web-client/components/analytics/row/: Chart.vue  Row.vue  Table.vue
web-client/components/dashboard/: AddDataModal.vue  DisabledCardsModal.vue  Group.vue  Groups.vue
web-client/components/dashboard/card/: Buttons.vue  Card.vue  Inputs.vue  Statistics.vue
web-client/components/dashboard/header/: Header.vue  LeftSide.vue
web-client/components/footer/: Footer.vue
web-client/components/garthen/: Button.vue  Checkbox.vue  Input.vue  Loader.vue  Logo.vue  Modal.vue  Select.vue  Table.vue
web-client/components/greenhouses/: ConnectModal.vue  CreateModal.vue  List.vue  Selector.vue
web-client/components/header/: Header.vue
web-client/components/home-page/: Badge.vue  GetStarted.vue  Hero.vue
web-client/components/home-page/additional-features/: AdditionalFeatures.vue  Section.vue
web-client/components/home-page/main-features/: Card.vue  MainFeatures.vue
web-client/components/navbar/: Navbar.vue
web-client/components/profile/: Auth.vue  AuthModal.vue  Avatar.vue  Card.vue  CardModal.vue  Profile.vue
web-client/components/profile/card/: Card.vue  Modal.vue  ModalMiddleContent.vue
web-client/components/settings/: CriticalValues.vue  DangerZone.vue  DeleteGreenhouseModal.vue  General.vue
web-client/components/settings/header/: Header.vue  LeftSide.vue  RightSide.vue
web-client/layouts/: app.vue  default.vue
web-client/pages/: index.vue
web-client/pages/greenhouses/: index.vue
web-client/pages/greenhouses/[greenhouseId]/: analytics.vue  index.vue  settings.vue
web-client/plugins/: authorizedFetch.client.js  webSocket.client.js
web-client/stores/: constants.js  data.js  system.js  user.js
