[package]
name = "garthen-data-worker"
version = "0.0.1"
authors = ["Ivan <contact@mixero.dev>"]
edition = "2021"
description = "Data Worker module of the Garthen Project"
readme = "README.md"
homepage = "https://github.com/Mixerou/garthen/tree/main/data-worker"
repository = "https://github.com/Mixerou/garthen"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
