[package]
name = "garthen-data-worker"
version = "0.0.1"
authors = ["Ivan <contact@mixero.dev>"]
edition = "2021"
description = "Data Worker module of the Garthen Project"
readme = "README.md"
homepage = "https://github.com/Mixerou/garthen/tree/main/data-worker"
repository = "https://github.com/Mixerou/garthen"

[dependencies]
db = { path = "../libs/db" }
diesel = { version = "2.0.3", default-features = false }
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
r2d2 = { version = "0.8.10", default-features = false }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_repr = "0.1.10"
snowflake-generator = { path = "../libs/snowflake-generator" }
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread"] }
