[package]
name = "garthen-global-api"
version = "0.0.1"
authors = ["Ivan <contact@mixero.dev>"]
edition = "2021"
description = "Global API module of the Garthen Project"
readme = "README.md"
homepage = "https://garthen.mixero.dev/api/v0"
repository = "https://github.com/Mixerou/garthen"

[dependencies]
actix-web = "4.3.0"
argon2 = { version = "0.4.1", default-features = false }
db = { path = "../libs/db" }
diesel = { version = "2.0.3", default-features = false }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.26"
log = "0.4.17"
nanoid = "0.4.0"
passwd = { path = "../libs/passwd" }
r2d2 = { version = "0.8.10", default-features = false }
rustdns = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde-enum-str = "0.3.2"
serde_json = "1.0.91"
serde_repr = "0.1.10"
serde_variant = "0.1.2"
snowflake-generator = { path = "../libs/snowflake-generator" }
