[package]
name = "garthen-global-ws"
version = "0.0.1"
authors = ["Ivan <contact@mixero.dev>"]
edition = "2021"
description = "Global WebSocket module of the Garthen Project"
readme = "README.md"
homepage = "https://garthen.mixero.dev/ws"
repository = "https://github.com/Mixerou/garthen"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.0"
actix-web-actors = "4.2.0"
db = { version = "0.3.0", path = "../libs/db" }
diesel = { version = "2.0.3", default-features = false }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
r2d2 = { version = "0.8.10", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde-eetf = { path = "../libs/serde-eetf" }
serde_json = "1.0.93"
serde_repr = "0.1.10"
snowflake-generator = { path = "../libs/snowflake-generator" }
