[package]
name = "garthen-global-ws"
version = "0.1.0"
authors = ["Ivan <contact@mixero.dev>"]
edition = "2021"
description = "Global WebSocket module of the Garthen Project"
readme = "README.md"
homepage = "https://garthen.mixero.dev/ws"
repository = "https://github.com/Mixerou/garthen"

[dependencies]
actix = "0.13.0"
actix-broker = "0.4.3"
actix-web = "4.3.0"
actix-web-actors = "4.2.0"
amqp = { path = "../libs/amqp" }
argon2 = { version = "0.4.1", default-features = false }
db = { path = "../libs/db" }
derivative = "2.2.0"
diesel = { version = "2.0.3", default-features = false }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
passwd = { path = "../libs/passwd" }
r2d2 = { version = "0.8.10", default-features = false }
rustdns = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde-eetf = { path = "../libs/serde-eetf" }
serde-enum-str = "0.3.2"
serde_json = "1.0.93"
serde_repr = "0.1.10"
serde_variant = "0.1.2"
snowflake-generator = { path = "../libs/snowflake-generator" }
