[package]
name = "serde-eetf"
version = "0.1.0"
authors = [
    "Graeme Coupar <grambo@grambo.me.uk>",
    "Ivan <contact@mixero.dev>",
]
edition = "2021"
description = "Erlang external term format support for serde"
readme = "README.md"
homepage = "https://github.com/Mixerou/garthen"
repository = "https://github.com/Mixerou/garthen"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
eetf = "0.8.0"
heck = "0.4.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"
serde = "1.0.152"
serde-transcode = "1.1.1"
serde_json = "1.0.93"
wasm-bindgen = "0.2.84"

[dev-dependencies]
serde_derive = "1.0.152"
