[package]
name = "snowflake-generator"
version = "0.1.0"
authors = ["Ivan <contact@mixero.dev>"]
edition = "2021"
description = "Rust version of the Twitter Snowflake algorithm"
readme = "README.md"
homepage = "https://github.com/Mixerou/garthen"
repository = "https://github.com/Mixerou/garthen"

[dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
rs-snowflake = "0.6.0"
